<resources>
    <string name="app_name">Durango Bizi</string>
    <string name="content_description_jugar">JUGAR</string>
    <string name="jugar">JUGAR</string>
    <string name="content_description_lenguaje">LENGUAJE</string>
    <string name="lenguaje">LENGUAJE</string>
    <string name="content_description_ranking">RANKING</string>
    <string name="ranking">RANKING</string>
    <string name="content_description_acerca_de">ACERCA DE</string>
    <string name="acerca_de">ACERCA DE</string>
    <string name="content_description_mascota_de_la_aplicacion">Mascota de la aplicación</string>
    <string name="content_description_separador">Separador</string>
    <string name="bienvenido_durango">¡Bienvenido a\nDURANGO BIZI!</string>
    <string name="ingresar_nombre">Ingresa tu nombre de perfil a utilizar en la aplicación.</string>
    <string name="ingresa_tu_nombre_de_perfil">Ingresa tu nombre de perfil</string>
    <string name="comenzar">Comenzar</string>
    <string name="bienvenida">¡Hola, %s👋!</string>
    <string name="title_activity_mapa">MapaActivity</string>
    <string name="desarrollado_por">Desarrollado por:</string>
    <string name="integrantes">Julio González\nMikel Ramos\nLierni Sarraoa\nLuis Ortiz de Villalba\nIrati Cossio\nAne Hernández\nLucía López\nIxone Revuelta</string>
    <string name="cerrar">Cerrar</string>
    <string name="enhorabuena">Has obtenido una nueva pieza del puzle</string>
    <string name="titulo_enhorabuena">¡Enhorabuena!</string>
    <string name="texto_enhorabuena">¡Muy bien! Has completado la actividad correctamente.</string>
    <string name="trofeo">Trofeo</string>
    <string name="volver">VOLVER</string>
    <string name="puzleFinal">PUZLE FINAL</string>
    <string name="puntuacion">Puntuación:</string>
    <string name="_0">0</string>
    <string name="pregunta_1">La basílica se llama Santa Ana de Uribarri.</string>
    <string name="pregunta_2">Nace a principios del siglo XV.</string>
    <string name="pregunta_3">Los bombardeos de 1937 provocaron la muerte de ciudadanos.</string>
    <string name="pregunta_4">Tiene el pórtico más pequeño de Euskal Herria.</string>
    <string name="verdadero">Verdadero</string>
    <string name="falso">Falso</string>
    <string name="reintentar">Reintentar</string>
    <string name="volver_mapa">Volver al mapa</string>
    <string name="_0de4">¡Intentalo de nuevo!</string>
    <string name="_1de4">¡Lo puedes hacer mejor!</string>
    <string name="_2de4">¡Muy bien, ya casi lo tienes!</string>
    <string name="_3de4">¡Casi lo tienes!</string>
    <string name="_4de4">¡Excelente!</string>
    <string name="puntaje_final">Puntuaste %1$d de %2$d</string>
    <string name="correcto">¡Respuesta correcta!</string>
    <string name="incorrecto">¡Respuesta incorrecta!</string>
    <string name="explicacionSirena">Para conmemorar el bombardeo ocurrido en Durango el 31 de marzo de 1937, cada año en esa fecha 3 veces al día (a las 8:00 de la mañana, a primera hora de la tarde y a última hora del día), suena la sirena que Se escucha el sonido del día del bombardeo. Esto se hace para honrar a las víctimas, así como para reafirmar nuestro compromiso con la memoria, la paz y la justicia.</string>
    <string name="enunciadoSirena">Elige el sonido de la sirena de bombardeo correcta</string>
    <string name="opcion1">Opcion 1</string>
    <string name="opcion2">Opcion 2</string>
    <string name="opcion3">Opcion 3</string>
    <string name="opcion4">Opcion 4</string>
    <string name="comprobar">Comprobar</string>
    <string name="SirenaselecionaOpcion">Selecciona una opción</string>
    <string name="SirenaIncorrecto">Incorrecto, inténtalo de nuevo</string>
    <string name="aciertoSirena">Has acertado el sonido correcto</string>
    <string name="FeriaIncorrecto">Este elemento no pertenece a la Feria</string>
    <string name="aciertoFeria">Has acertado los elementos correctos de la feria</string>
    <string name="salir_app">Salir</string>
    <string name="titulo_despedida">¡Felicidades! Has completado todas las actividades.</string>
    <string name="texto_despedida">Espero que hayas disfrutado de la experiencia de aprendizaje sobre durango.</string>
    <string name="informacion">INFORMACIÓN</string>
    <string name="texto_info_basilica">\tEl edificio que tenemos aquí se llama Basílica de Santa María de Uribarri y se creó a finales del siglo XV. Este monumento es una de las obras más impresionantes de Euskal Herria. Además de la basílica, su pórtico es notable, ya que es el más grande de Euskal Herria.\n
\tComo curiosidad, en el bombardeo que sufrió Durango el 31 de marzo de 1937, el pórtico y el edificio de la basílica quedaron destruidos, y en él murieron los ciudadanos que participaban en la misa.</string>
    <string name="antesComenzar">Antes de Comenzar...</string>
    <string name="texto_info_Sirena">Para conmemorar el bombardeo ocurrido en Durango el 31 de marzo de 1937, cada año en esa fecha 3 veces al día (a las 8:00 de la mañana, a primera hora de la tarde y a última hora del día), suena la sirena que Se escucha el sonido del día del bombardeo. Esto se hace para honrar a las víctimas, así como para reafirmar nuestro compromiso con la memoria, la paz y la justicia.</string>
    <string name="quienes_son">¿Quienes son estos personajes?</string>
    <string name="patxikotxu">Patxikotxu</string>
    <string name="pantxike">Pantxike</string>
    <string name="potxikotxu">Potxikotxu</string>
    <string name="pantxilotu">Pantxilotu</string>
    <string name="pantxikixu">Pantxikixu</string>
    <string name="pantxika">Pantxika</string>
    <string name="patxike">Patxike</string>
    <string name="pantxiko">Pantxiko</string>
    <string name="aciertoPatxikotxu">Has acertado los nombres de los personajes</string>
    <string name="intentos_artopil">Intentos restantes:</string>
    <string name="intentos_artopil_numero">3</string>
    <string name="aciertoArtopil">Has acertado la imagen de Artopil</string>
    <string name="errorArtopil">Esta imagen no es la imagen de Artopil</string>
    <string name="encontrarMikeldi">Has encontrado a Mikeldi</string>
    <string name="sopa_de_letras">Sopa de letras</string>
    <string name="pieza">PIEZA</string>
    <string name="sopa_letras_completo">Has encontrado todas las palabras de la sopa de letras!</string>
    <string name="ranking_titulo">RANKING</string>
    <string name="puzzle_final">Cuando juegues a todos se activara el puzzle!</string>
</resources>